--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
                     </li>
                     <li class="nav-item dropdown">
                         <div class="dropdown">
-                            <a href="event.html" class="nav-link">EVENTS</a>
+                            <a href="events.html" class="nav-link">EVENTS</a>
                             <div class="dropdown-content">
-                                <a href="#">LIVE EVENTS</a>
-                                <a href="#">UPCOMMING EVENTS</a>
-                                <a href="#">PAST EVENTS</a>
+                                <a href="live_event.html">LIVE EVENTS</a>
+                                <a href="upcoming_events.html">UPCOMMING EVENTS</a>
+                                <a href="past_events.html">PAST EVENTS</a>
                             </div>
                         </div>
                     </li>
@@ -48,7 +48,7 @@
                                 <a href="leaderboard.html">LEADERBOARD</a>
                                 <a href="practiceset.html">PRACTICE SET</a>
                                 <a href="participants.html">PARTICIPANTS</a>
-                                <a href="#">WINNERS</a>
+                                <a href="winners.html">WINNERS</a>
                             </div>
                         </div>
                     </li>
