--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <div class="dropdown">
                     <a href="events.html" class="nav-link">EVENTS</a>
                     <div class="dropdown-content">
-                        <a href="#">LIVE EVENTS</a>
-                        <a href="#">UPCOMMING EVENTS</a>
-                        <a href="#">PAST EVENTS</a>
+                        <a href="live_event.html">LIVE EVENTS</a>
+                        <a href="upcoming_events.html">UPCOMMING EVENTS</a>
+                        <a href="past_events.html">PAST EVENTS</a>
                     </div>
                 </div>
             </li>
@@ -45,7 +45,7 @@
                         <a href="leaderboard.html">LEADERBOARD</a>
                         <a href="practiceset.html">PRACTICE SET</a>
                         <a href="participants.html">PARTICIPANTS</a>
-                        <a href="#">WINNERS</a>
+                        <a href="winners.html">WINNERS</a>
                     </div>
                 </div>
             </li>
