--- a/contact.html
+++ b/contact.html
@@ -72,7 +72,7 @@
 <body>
 
     <div class="evebanner">
-        <img src="img/Contact.png" alt="">
+        <img src="img/banner/Contact.png" alt="">
       </div>
 
     <main class="contact-main">
