--- a/gallery.html
+++ b/gallery.html
@@ -76,7 +76,7 @@
 <body>
 
     <div class="evebanner">
-        <img src="img/Gallery.png" alt="">
+        <img src="img/banner/Gallery.png" alt="">
       </div>
     <div class="slideshow-container">
 
