--- a/leaderboard.html
+++ b/leaderboard.html
@@ -76,6 +76,11 @@
 </nav>
 
 <body>
+
+    <div class="evebanner">
+        <img src="img/banner/leaderboard.png" alt="">
+    </div>
+
     <div class="leaderboard">
         <!-- <div class="description">
             <h3>LEADER BOARD </h3>
