--- a/live_event.html
+++ b/live_event.html
@@ -69,11 +69,13 @@
 </nav>
 
 <body class="eventbody">
+
+    <div class="evebanner">
+        <img src="img/banner/live_event.png" alt="">
+    </div>
     
     <div class="main">
         <div class="event2bar">
-
-            <img src="img/Upcoming.png" alt="">
             <div class="container">
                 <div class="card-container">
                     <div class="row">
