--- a/participants.html
+++ b/participants.html
@@ -73,7 +73,7 @@
 <body>
 
     <div class="evebanner">
-        <img src="img/Participants.png" alt="">
+        <img src="img/banner/Participants.png" alt="">
       </div>
 
     <div class="overflow-auto">
