--- a/past_events.html
+++ b/past_events.html
@@ -68,6 +68,11 @@
     </nav>
 
 <body>
+
+    <div class="evebanner">
+        <img src="img/banner/past_event.png" alt="">
+    </div>
+
     <div class="main">
       <div class="event2bar">
 
