--- a/practiceset.html
+++ b/practiceset.html
@@ -71,7 +71,7 @@
 <body>
 
     <div class="evebanner">
-        <img src="img/Practice-set.png" alt="">
+        <img src="img/banner/Practice-set.png" alt="">
       </div>
 
     <div class="overflow-auto">
