--- a/training.html
+++ b/training.html
@@ -74,7 +74,7 @@
 <body>
 
     <div class="evebanner">
-        <img src="img/Training.png" alt="">
+        <img src="img/banner/Training.png" alt="">
       </div>
 
     <!-- <header>
