--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -69,8 +69,8 @@
     </div>
 </nav>             
 <body class="">
-    <div class="imgheader">
-        <img src="img/XYZ.png" alt="">
+    <div class="evebanner">
+        <img src="img/banner/upcoming_event.png" alt="">
     </div>
     <div class="row eventbody">
         <div class="containereventdetail col-xl-8 col-lg-8">
