--- a/winners.html
+++ b/winners.html
@@ -76,7 +76,7 @@
 <body class="eventbody">
 
     <div class="evebanner">
-        <img src="img/Winner.png" alt="">
+        <img src="img/banner/Winner.png" alt="">
       </div>
   
 <div class="main">
