--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
 <body id="body">
     <div class="evebanner">
-        <img src="img/About.png" alt="">
+        <img src="img/banner/About.png" alt="">
       </div>
         
             <div class="container">
