--- a/collaborator.html
+++ b/collaborator.html
@@ -74,7 +74,7 @@
 <body id="body" class="overflow-x-hidden ">
 
     <div class="evebanner">
-        <img src="img/Collaborator.png" alt="">
+        <img src="img/banner/Collaborator.png" alt="">
       </div>
 
 <div class="wrapper mx-5">
