--- a/events.html
+++ b/events.html
@@ -71,7 +71,7 @@
 
 <body id="body">
   <div class="evebanner">
-    <img src="img/Events.png" alt="">
+    <img src="img/banner/Events.png" alt="">
   </div>
   <h2 class="heading"> <strong>Up-Coming Events</strong>  </h2>
   <div class="containerofcards">
