--- a/winners.html
+++ b/winners.html
@@ -82,25 +82,31 @@
 <div class="main">
     <div class="head">  
     <div class="wrapper">
-        <h3 class="card-title">Results</h3>
+        <h3 class="card-title">Hackathon Winners</h3>
          <div class="cols">
             <div class="col">
               <div class="container">				
                 <div class="front">					
                     <div class="inner">
-                        <div class="front1"></div>
-                        <img src="img/1.jpg" alt="">
-                        <p class="p1">Krishivikalp</p> 
+                        <div class="Hackathon_1">
+                            <div class="front1_1"></div>
+                            <div class="front1_2"></div>
+                            <div class="front1_3"></div>
+                        </div>
+                        <p >First Position</p> 
                     </div>
                 </div>
                 <div class="back">
                     <div class="inner"> 
-                        <p class="inner_p_1"><b>Event Name:-Krishi Vikalp</b></br>
-                            <b>Event Date-</b>25th February 2023</br>
-                            <b>Event Duration-</b>2 to 3 hrs</br>
-                            <b>Event Venue-</b>Sri Sukhmani Institute of Management, Dwarka, New Delhi.</p>                
-                        <p class="inner_p">This event brings real agriculture problem statements to different teams of the college, which are solved by the students.</p>
-                        <a href="#">View Winners...</a>
+                        <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
+                            <b>Sub-event-</b>Hackathon</br>
+                            <b>Event Date-</b>7th and 18th December 2022</br>
+                            <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
+                            <b>Event-Venue-</b>BTKIT Dwarahat.
+                            <b>Winner's Name- Rishabh Gosain,Yuvraj Aggarwal,Sahej Budhiraja</b>
+                        </p>                
+                        <p class="inner_p">Received Cash Prize:-</p>
+                        <img class="participant" src="img/First-Prize-Hackathon-1024x500.jpeg"></img>
                     </div>
                 </div>
               </div>
@@ -109,8 +115,12 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                    <div class="front2"></div>
-                  <p>Hackathon</p>
+                    <div class="Hackathon_2">
+                        <div class="front1_4"></div>
+                        <div class="front1_5"></div>
+                        <div class="front1_6"></div>
+                    </div>
+                  <p >Second Position</p>
                   </div>
                 </div>
                 <div class="back">
@@ -119,10 +129,41 @@
                         <b>Sub-event-</b>Hackathon</br>
                         <b>Event Date-</b>7th and 18th December 2022</br>
                         <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                        <b>Event-Venue-</b>BTKIT Dwarahat.</p>                
-                    <p class="inner_p">Here Professional industry mentors evaluate the level and choose the winning team. The winning team gets the prize money.</p>
-                    <a href="#">View Winners...</a>
+                        <b>Event-Venue-</b>BTKIT Dwarahat.
+                        <b>Participant's Name- Ishika Agarwal,Himanshu Joshi,Anmol Jain</b>
+                    </p>                
+                    <p class="inner_p">Recieved Cash Prize:-</p>
+                    <img class="participant" src="img/Second-Prize-Hackathon.jpeg"></img>
                   </div>
+                </div>
+              </div>
+            </div>
+          </div>
+       </div>   
+       <h3 class="card-title">Ideathon Winners</h3>
+         <div class="cols">
+            <div class="col">
+              <div class="container">				
+                <div class="front">					
+                    <div class="inner">
+                        <div class="Ideathon_1">
+                            <div class="front2_1"></div>
+                        <p >First Position</p> 
+                        </div>
+                    </div>
+                </div>
+                <div class="back">
+                    <div class="inner"> 
+                        <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
+                            <b>Sub-event-</b>Ideathon</br>
+                            <b>Event Date-</b>7th and 18th December 2022</br>
+                            <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
+                            <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                            <b>Winner's Name- Kunal Thapliyal</b>
+                        </p>                
+                        <p class="inner_p">Received Cash Prize:-</p>
+                        <img class="participant" src="img/First-Prize-Ideathon.jpeg"></img>
+                    </div>
                 </div>
               </div>
             </div>
@@ -130,20 +171,81 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                    <div class="front3"></div>
-                  <p>Ideathon</p>
+                    <div class="Ideathon_2">
+                        <div class="front2_2"></div>
+                    </div>
+                  <p >Second Position</p>
                   </div>
                 </div>
                 <div class="back">
                   <div class="inner">
                     <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                        <b>Sub-event-</b>Ideathon</br>
+                        <b>Sub-event-</b>Hackathon</br>
                         <b>Event Date-</b>7th and 18th December 2022</br>
-                        <b>Event Duration-</b>24hrs(Split over 2 Days)</br>
-                        <b>Event-Venue-</b>BTKIT Dwarahat.</p>                
-                    <p class="inner_p">Here all the Participating teams(both winning and losing) were assigned to industry mentors for specific periods.</p>
-                    <a href="#">View Winners...</a>
+                        <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
+                        <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                        <b>Participant's Name- Daksh Suryavanshi</b>
+                    </p>                
+                    <p class="inner_p">Recieved Cash Prize:-</p>
+                    <img class="participant" src="img/Second-Prize-Ideathon.jpeg"></img>
                   </div>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+                <div class="container">
+                  <div class="front">
+                    <div class="inner">
+                      <div class="Ideathon_3">
+                          <div class="front2_3"></div>
+                          <div class="front2_4"></div>
+                          <div class="front2_5"></div>
+                      </div>
+                    <p >Third Position</p>
+                    </div>
+                  </div>
+                  <div class="back">
+                    <div class="inner">
+                      <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
+                          <b>Sub-event-</b>Hackathon</br>
+                          <b>Event Date-</b>7th and 18th December 2022</br>
+                          <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
+                          <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                          <b>Participant's Name- Ashutosh Kumar,Harsh Bhardwaj,Anmol Ratan Tiwari</b>
+                      </p>                
+                      <p class="inner_p">Recieved Cash Prize:-</p>
+                      <img class="participant" src="img/Third-Prize-Ideathon.jpeg"></img>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+       </div> 
+       <h3 class="card-title">Coding Competition Winners</h3>
+         <div class="cols">
+            <div class="col">
+              <div class="container">				
+                <div class="front">					
+                    <div class="inner">
+                        <div class="Coding_1">
+                            <div class="front3_1"></div>
+                            <div class="front3_2"></div>
+                        </div>
+                        <p >First Position</p> 
+                    </div>
+                </div>
+                <div class="back">
+                    <div class="inner"> 
+                        <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
+                            <b>Sub-event-</b>Hackathon</br>
+                            <b>Event Date-</b>7th and 18th December 2022</br>
+                            <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
+                            <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                            <b>Winner's Name- Jatin Gusain,Chetan Batra</b>
+                        </p>                
+                        <p class="inner_p">Received Cash Prize:-</p>
+                        <img class="participant" src="img/First-Prize-Coding.jpeg"></img>
+                    </div>
                 </div>
               </div>
             </div>
@@ -151,19 +253,25 @@
               <div class="container">
                 <div class="front">
                   <div class="inner">
-                    <div class="front4"></div>
-                  <p>Coding Competition</p>
+                    <div class="Coding_2">
+                        <div class="front3_3"></div>
+                        <div class="front3_4"></div>
+                        <div class="front3_5"></div>
+                    </div>
+                  <p >Second Position</p>
                   </div>
                 </div>
                 <div class="back">
                   <div class="inner">
                     <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                        <b>Sub-event-</b>Coding Competition</br>
+                        <b>Sub-event-</b>Hackathon</br>
                         <b>Event Date-</b>7th and 18th December 2022</br>
-                        <b>Event Duration-</b>24hrs(Split over 2 Days)</br>
-                        <b>Event-Venue-</b>BTKIT Dwarahat.</p>                
-                    <p class="inner_p">Here Aim of this event is to level up programming skills of student's for technical roles.</p>
-                    <a href="#">View Winners...</a>
+                        <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
+                        <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                        <b>Participant's Name- X,Y,Z</b>
+                    </p>                
+                    <p class="inner_p">Recieved Cash Prize:-</p>
+                    <img class="participant" src="img/Second-Prize-Coding.jpeg"></img>
                   </div>
                 </div>
               </div>
