--- a/winners.html
+++ b/winners.html
@@ -116,9 +116,9 @@
                 <div class="front">
                   <div class="inner">
                     <div class="Hackathon_2">
-                        <div class="front1_4"></div>
-                        <div class="front1_5"></div>
-                        <div class="front1_6"></div>
+                        <div class="front1_4"><img src="img/Sahej-Budhiraja-1st-hackathon-150x150.jpeg"></div>
+                        <div class="front1_5"><img src="img/Rishabh-Pic-1st-hackathon150x150.jpeg"></div>
+                        <div class="front1_6"><img src="img/Yuvraj-Aggarwal-1st-hackathon150x150.jpeg"></div>
                     </div>
                   <p >Second Position</p>
                   </div>
