--- a/winners.html
+++ b/winners.html
@@ -89,9 +89,12 @@
                 <div class="front">					
                     <div class="inner">
                         <div class="Hackathon_1">
-                            <div class="front1_1"></div>
-                            <div class="front1_2"></div>
-                            <div class="front1_3"></div>
+                            <div class="front1_1"><img src="img/Yuvraj-Aggarwal-1st-hackathon150x150.jpeg">
+                                <span>Yuvraj Aggarwal</span></div>
+                            <div class="front1_2"><img src="img/Rishabh-Pic-1st-hackathon150x150.jpeg">
+                                <span>Rishabh</span></div>
+                            <div class="front1_3"><img src="img/Sahej-Budhiraja-1st-hackathon-150x150.jpeg">
+                                <span>Rishabh</span></div>
                         </div>
                         <p >First Position</p> 
                     </div>
@@ -116,9 +119,9 @@
                 <div class="front">
                   <div class="inner">
                     <div class="Hackathon_2">
-                        <div class="front1_4"><img src="img/Sahej-Budhiraja-1st-hackathon-150x150.jpeg"></div>
-                        <div class="front1_5"><img src="img/Rishabh-Pic-1st-hackathon150x150.jpeg"></div>
-                        <div class="front1_6"><img src="img/Yuvraj-Aggarwal-1st-hackathon150x150.jpeg"></div>
+                        <div class="front1_4"></div>
+                        <div class="front1_5"></div>
+                        <div class="front1_6"></div>
                     </div>
                   <p >Second Position</p>
                   </div>
