update in past event

--- a/past_events.html
+++ b/past_events.html
@@ -161,11 +161,18 @@
                 </div>
             </div>
              </div>
+
+             <div class="container">
+                <div class="knowmore">
+                    <p>If you want to participate in such events do contact us and win the exiciting prizes. &nbsp;
+                        <a href="contact.html"><button class="btn btn-primary px-5 py-2 primary-btn" id="contact">Get in Touch</button></a>        
+                    </p>  
+                </div>
+             </div>
     </main>
-    <p>&nbsp;&nbsp;If you want to participate in such events do contact us and win the exiciting prizes. &nbsp;<a href="contact.html"><button class="btn btn-primary px-5 py-2 primary-btn" id="contact">Contact Us</button></a>        
-    </p>
+
             
-    <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="../assets/dist/js/bootstrap.bundle.min.js"></script> -->
 </body>
 
 <footer class="footer-section">
