--- a/winners.html
+++ b/winners.html
@@ -89,14 +89,16 @@
                 <div class="front">					
                     <div class="inner">
                         <div class="Hackathon_1">
-                            <div class="front1_1"><img src="img/Yuvraj-Aggarwal-1st-hackathon150x150.jpeg">
-                                <span>Yuvraj Aggarwal</span></div>
-                            <div class="front1_2"><img src="img/Rishabh-Pic-1st-hackathon150x150.jpeg">
+                            <div class="front1_1"><img src="img/Yuvraj-Aggarwal-1st-hackathon150x150.jpeg" class = "img-part">
+                                <span>Yuvraj</span></div>
+                            <div class="front1_2"><img src="img/Rishabh-Pic-1st-hackathon150x150.jpeg" class = "img-part">
                                 <span>Rishabh</span></div>
-                            <div class="front1_3"><img src="img/Sahej-Budhiraja-1st-hackathon-150x150.jpeg">
+                            <div class="front1_3"><img src="img/Sahej-Budhiraja-1st-hackathon-150x150.jpeg" class = "img-part">
                                 <span>Rishabh</span></div>
                         </div>
-                        <p >First Position</p> 
+                        <br>
+                        <br>
+                        <p>First Position</p> 
                     </div>
                 </div>
                 <div class="back">
