--- a/winners.html
+++ b/winners.html
@@ -103,11 +103,7 @@
                 </div>
                 <div class="back">
                     <div class="inner"> 
-                        <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                            <b>Sub-event-</b>Hackathon</br>
-                            <b>Event Date-</b>7th and 18th December 2022</br>
-                            <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                            <b>Event-Venue-</b>BTKIT Dwarahat.
+                        <p class="inner_p_1">
                             <b>Winner's Name- Rishabh Gosain,Yuvraj Aggarwal,Sahej Budhiraja</b>
                         </p>                
                         <p class="inner_p">Received Cash Prize:-</p>
@@ -121,21 +117,20 @@
                 <div class="front">
                   <div class="inner">
                     <div class="Hackathon_2">
-                        <div class="front1_4"></div>
-                        <div class="front1_5"></div>
-                        <div class="front1_6"></div>
+                        <div class="front1_4"><img src="img/Himanshu-Pic-2nd-hackathon150x150.jpeg" class = "img-part">
+                            <span>Himanshu</span></div>
+                        <div class="front1_5"><img src="img/Anmol-Jain-Pic-2nd-hackathon150x150.jpeg" class = "img-part">
+                            <span>Anmol</span></div>
+                        <div class="front1_6"><img src="img/Ishika-Pic-2nd-hackathon150x150.jpeg" class = "img-part">
+                            <span>Ishika</span></div>
                     </div>
                   <p >Second Position</p>
                   </div>
                 </div>
                 <div class="back">
                   <div class="inner">
-                    <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                        <b>Sub-event-</b>Hackathon</br>
-                        <b>Event Date-</b>7th and 18th December 2022</br>
-                        <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                        <b>Event-Venue-</b>BTKIT Dwarahat.
-                        <b>Participant's Name- Ishika Agarwal,Himanshu Joshi,Anmol Jain</b>
+                    <p class="inner_p_1">
+                        <b>Winner's Name- Ishika Agarwal,Himanshu Joshi,Anmol Jain</b>
                     </p>                
                     <p class="inner_p">Recieved Cash Prize:-</p>
                     <img class="participant" src="img/Second-Prize-Hackathon.jpeg"></img>
@@ -152,18 +147,15 @@
                 <div class="front">					
                     <div class="inner">
                         <div class="Ideathon_1">
-                            <div class="front2_1"></div>
+                            <div class="front2_1"><img src="img/Kunal-Thapliyal-1st-Ideathon-150x150.jpeg" class = "img-part">
+                                <span>Kunal</span></div>
                         <p >First Position</p> 
                         </div>
                     </div>
                 </div>
                 <div class="back">
                     <div class="inner"> 
-                        <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                            <b>Sub-event-</b>Ideathon</br>
-                            <b>Event Date-</b>7th and 18th December 2022</br>
-                            <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                            <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                        <p class="inner_p_1">
                             <b>Winner's Name- Kunal Thapliyal</b>
                         </p>                
                         <p class="inner_p">Received Cash Prize:-</p>
@@ -177,19 +169,15 @@
                 <div class="front">
                   <div class="inner">
                     <div class="Ideathon_2">
-                        <div class="front2_2"></div>
-                    </div>
+                        <div class="front2_2"><img src="img/Daksh-Suryavanshi-2nd-Ideathon-150x150.jpeg" class = "img-part">
+                                <span>Daksh</span></div>
                   <p >Second Position</p>
                   </div>
                 </div>
                 <div class="back">
                   <div class="inner">
-                    <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                        <b>Sub-event-</b>Hackathon</br>
-                        <b>Event Date-</b>7th and 18th December 2022</br>
-                        <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                        <b>Event-Venue-</b>BTKIT Dwarahat.</br>
-                        <b>Participant's Name- Daksh Suryavanshi</b>
+                    <p class="inner_p_1">
+                        <b>Winner's Name- Daksh Suryavanshi</b>
                     </p>                
                     <p class="inner_p">Recieved Cash Prize:-</p>
                     <img class="participant" src="img/Second-Prize-Ideathon.jpeg"></img>
@@ -202,21 +190,20 @@
                   <div class="front">
                     <div class="inner">
                       <div class="Ideathon_3">
-                          <div class="front2_3"></div>
-                          <div class="front2_4"></div>
-                          <div class="front2_5"></div>
+                          <div class="front2_3"><img src="img/Anmol-Ratan-Pic-3rd-Ideathon-150x150.jpeg" class = "img-part">
+                            <span>Anmol</span></div>
+                          <div class="front2_4"><img src="img/Ashutosh-Pic-3rd-Ideathon150x150.jpeg" class = "img-part">
+                            <span>Ashutosh</span></div>
+                          <div class="front2_5"><img src="img/Harsh-Pic-3rd-Ideathon150x150.jpeg" class = "img-part">
+                            <span>Harsh</span></div>
                       </div>
                     <p >Third Position</p>
                     </div>
                   </div>
                   <div class="back">
                     <div class="inner">
-                      <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                          <b>Sub-event-</b>Hackathon</br>
-                          <b>Event Date-</b>7th and 18th December 2022</br>
-                          <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                          <b>Event-Venue-</b>BTKIT Dwarahat.</br>
-                          <b>Participant's Name- Ashutosh Kumar,Harsh Bhardwaj,Anmol Ratan Tiwari</b>
+                      <p class="inner_p_1">
+                          <b>Winner's name- Ashutosh Kumar,Harsh Bhardwaj,Anmol Ratan Tiwari</b>
                       </p>                
                       <p class="inner_p">Recieved Cash Prize:-</p>
                       <img class="participant" src="img/Third-Prize-Ideathon.jpeg"></img>
@@ -233,19 +220,17 @@
                 <div class="front">					
                     <div class="inner">
                         <div class="Coding_1">
-                            <div class="front3_1"></div>
-                            <div class="front3_2"></div>
+                            <div class="front3_1"><img src="img/Jatin-Pic-1st-Coding-150x150.jpeg" class = "img-part">
+                                <span>Jatin</span></div>
+                            <div class="front3_2"><img src="img/Chetan-Batra-Pic-1st-coding-150x150.jpeg" class = "img-part">
+                                <span>Chetan</span></div>
                         </div>
                         <p >First Position</p> 
                     </div>
                 </div>
                 <div class="back">
                     <div class="inner"> 
-                        <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                            <b>Sub-event-</b>Hackathon</br>
-                            <b>Event Date-</b>7th and 18th December 2022</br>
-                            <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                            <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                        <p class="inner_p_1">
                             <b>Winner's Name- Jatin Gusain,Chetan Batra</b>
                         </p>                
                         <p class="inner_p">Received Cash Prize:-</p>
@@ -259,9 +244,12 @@
                 <div class="front">
                   <div class="inner">
                     <div class="Coding_2">
-                        <div class="front3_3"></div>
-                        <div class="front3_4"></div>
-                        <div class="front3_5"></div>
+                        <div class="front3_3"><img src="img/" class = "img-part">
+                            <span>X</span></div>
+                        <div class="front3_4"><img src="img/" class = "img-part">
+                            <span>Y</span></div>
+                        <div class="front3_5"><img src="img/" class = "img-part">
+                            <span>Z</span></div>
                     </div>
                   <p >Second Position</p>
                   </div>
