--- a/winners.html
+++ b/winners.html
@@ -105,7 +105,7 @@
                             <b>Winner's Name- Rishabh Gosain,Yuvraj Aggarwal,Sahej Budhiraja</b>
                         </p>                
                         <p class="inner_p">Received Cash Prize:-</p>
-                        <img class="participant" src="img/First-Prize-Hackathon-1024x500.jpeg"></img>
+                        <img src="img/First-Prize-Ideathon.jpeg" class="participant" ></img>
                     </div>
                 </div>
               </div>
@@ -226,11 +226,7 @@
                 </div>
                 <div class="back">
                     <div class="inner"> 
-                        <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                            <b>Sub-event-</b>Hackathon</br>
-                            <b>Event Date-</b>7th and 18th December 2022</br>
-                            <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                            <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                        <p class="inner_p_1">
                             <b>Winner's Name- Jatin Gusain,Chetan Batra</b>
                         </p>                
                         <p class="inner_p">Received Cash Prize:-</p>
@@ -252,11 +248,7 @@
                 </div>
                 <div class="back">
                   <div class="inner">
-                    <p class="inner_p_1"><b>Event Name:-SAMADHAN</b></br>
-                        <b>Sub-event-</b>Hackathon</br>
-                        <b>Event Date-</b>7th and 18th December 2022</br>
-                        <b>Event Duration-</b>24hrs (Split over 2 Days)</br>
-                        <b>Event-Venue-</b>BTKIT Dwarahat.</br>
+                    <p class="inner_p_1">
                         <b>Participant's Name- X,Y,Z</b>
                     </p>                
                     <p class="inner_p">Recieved Cash Prize:-</p>
