Update in Live and Upcoming Pages

--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -68,7 +68,7 @@
         </ul>
     </div>
 </nav>             
-<body class="">
+<body class="body">
     <div class="evebanner">
         <img src="img/banner/upcoming_event.png" alt="">
     </div>
