Update in upcoming result and index page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700;900&display=swap"
@@ -46,6 +47,7 @@
                         <a href="practiceset.html">PRACTICE SET</a>
                         <a href="participants.html">PARTICIPANTS</a>
                         <a href="winners.html">WINNERS</a>
+                        <a href="result.html">RESULT</a>
                     </div>
                 </div>
             </li>
@@ -80,9 +82,9 @@
                         sustainable development of innovative ideas, which are impactful for the growing economy and
                         society.
                     </p>
-                    <a href="about.html">
+                    <a href="upcoming_events.html">
                         <button class="btn btn-primary px-5 py-2 primary-btn">
-                            KNOW MORE
+                            REGISTER NOW
                         </button>
                     </a>
                 </div>
@@ -92,6 +94,30 @@
             </div>
         </div>
     </section>
+
+    <div class="container">
+        <div class="row">
+            <div class="aboutsection col-lg-7">
+                <h1>About GoHackathon</h1>
+                <p>Go Hackathon comprises of eminent Industry professionals, educators and students meant to
+                    nurture talent among budding tech professional. Industry today is looking for talented 
+                    students who are equipped and experience with advanced skills, software, attitude and 
+                    updated industry best practices. <br>
+                </p>
+                <p>We create an eco-system of industry academia partnership and help in continuous and sustainable 
+                    development of innovative ideas, which are impactful for the growing economy and society. 
+                    Go hackathon thrives to provide best nurturing, mentorship, skills and professional 
+                    opportunities to its members and participants.We conduct series of events, seminars, 
+                    hackathons, internships and Projects.
+                </p>  
+            </div>
+            <div class="imgofabout col-lg-5">
+                <img class="imgofabout" src="img/resources/about_img.jpg" alt="Dev">
+            </div>
+        </div>
+    </div>
+    <hr class="home_hr">
+
     <section class="sponsors">
         <div class="content text-center">
             <h2 text-align="center">SPONSORS AND ASSOCIATES</h2>
